# sghi-etl-runtime

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.rst
src/sghi/etl/runtime/: __init__.py
src/sghi/etl/runtime/setup/: config_file_loaders.py
src/sghi/etl/runtime/usecases/: __init__.py
test/sghi/etl/runtime_tests/: __init__.py
